force-app/main/default/objects/Lead/fields/Conversion_Source__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Source__c</fullName>
    <label>Conversion Source (Smart Convert)</label>
    <description>How the lead was converted: Smart Convert (the guided service) vs Native.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>