force-app/main/default/objects/Lead/fields/Create_Reason__c.field-meta.xml
<CustomField>
    <fullName>Create_Reason__c</fullName>
    <label>Create Reason (Smart Convert)</label>
    <description>Why a new account was created at conversion instead of converting into an existing one. Powers the duplicate-creation review.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>No existing firm matched</fullName><default>false</default><label>No existing firm matched</label></value>
            <value><fullName>Existing firm not found in search</fullName><default>false</default><label>Existing firm not found in search</label></value>
            <value><fullName>Genuinely new company</fullName><default>false</default><label>Genuinely new company</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>