force-app/main/default/objects/Lead/fields/Disqualified_At_Convert__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_At_Convert__c</fullName>
    <label>Disqualified at Convert (Smart Convert)</label>
    <description>True when the lead was converted for the single customer view but disqualified — linked to the account/contact with NO opportunity. Paired with Disqualify_Reason__c.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>