force-app/main/default/objects/Lead/fields/Disqualify_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualify_Reason__c</fullName>
    <label>Disqualify Reason (Smart Convert)</label>
    <description>Why the rep disqualified the lead in-flow instead of converting. Captures why leads die.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Existing customer</fullName><default>false</default><label>Existing customer</label></value>
            <value><fullName>Existing Opportunity</fullName><default>false</default><label>Existing Opportunity</label></value>
            <value><fullName>Duplicate enquiry</fullName><default>false</default><label>Duplicate enquiry</label></value>
            <value><fullName>Invalid email / bounced</fullName><default>false</default><label>Invalid email / bounced</label></value>
            <value><fullName>Not ICP</fullName><default>false</default><label>Not ICP</label></value>
            <value><fullName>Not interested</fullName><default>false</default><label>Not interested</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>