force-app/main/default/objects/Lead/fields/Manual_Search_Used__c.field-meta.xml
<CustomField>
    <fullName>Manual_Search_Used__c</fullName>
    <label>Manual Search Used (Smart Convert)</label>
    <description>True when the rep used the manual firm search rather than the auto-match. Flags domains/firms where enrichment or dedup is needed.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>