force-app/main/default/objects/Lead/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <label>Match Confidence (Smart Convert)</label>
    <description>The Smart Convert confidence tier at conversion: ONECLICK / REVIEW / GUIDED_CREATE.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>