force-app/main/default/objects/Lead/fields/New_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Created__c</fullName>
    <label>New Account Created (Smart Convert)</label>
    <description>True when Smart Convert created a new Account (Firm and/or Office) at conversion, rather than converting into an existing one. Powers the duplicate-creation-rate KPI.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>