force-app/main/default/objects/Lead/fields/Opportunity_Motion__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Motion__c</fullName>
    <label>Opportunity Motion (Smart Convert)</label>
    <description>Sales motion classified at convert: New Business, Cross-sell, Upsell, or Renewal. Lets the data team see the convert-to-expansion pipeline (existing clients converting into upsell/renewal rather than being disqualified).</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New Business</fullName><default>false</default><label>New Business</label></value>
            <value><fullName>Cross-sell</fullName><default>false</default><label>Cross-sell</label></value>
            <value><fullName>Upsell</fullName><default>false</default><label>Upsell</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>