force-app/main/default/objects/Lead/fields/Overrode_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Overrode_Recommendation__c</fullName>
    <label>Overrode Recommendation (Smart Convert)</label>
    <description>True when the rep converted into a different Office than the matcher recommended. Surfaces matcher mis-ranks / duplicate offices for the data team.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>