force-app/main/default/objects/Lead/fields/Recommended_Office__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Office__c</fullName>
    <label>Recommended Office (Smart Convert)</label>
    <description>The Office the matcher recommended at conversion. Compared with the actual converted account to learn where the matcher is wrong.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Smart Convert Recommended)</relationshipLabel>
    <relationshipName>Smart_Convert_Recommended_Leads</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>