force-app/main/default/objects/Lead/fields/Work_Areas__c.field-meta.xml
<CustomField>
    <fullName>Work_Areas__c</fullName>
    <label>Work Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Areas</valueSetName>
    </valueSet>
</CustomField>