force-app/main/default/objects/Lead/fields/Work_Jurisdictions__c.field-meta.xml
<CustomField>
    <fullName>Work_Jurisdictions__c</fullName>
    <label>Work Jurisdictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Jurisdiction</valueSetName>
    </valueSet>
</CustomField>